redis.tf
resource "azurerm_subnet" "redis" {
  name                 = "${module.naming.subnet.name}-redis"
  resource_group_name  = azurerm_resource_group.this.name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = [var.redis_subnet_address_prefix]
}

# Add Private Endpoint for Redis
resource "azurerm_private_endpoint" "redis" {
  name                = "${module.naming.private_endpoint.name}-redis"
  location            = azurerm_resource_group.this.location
  resource_group_name = azurerm_resource_group.this.name
  subnet_id           = azurerm_subnet.aks.id

  private_service_connection {
    name                           = "${var.name}-redis"
    private_connection_resource_id = azurerm_redis_cache.this.id
    is_manual_connection           = false
    subresource_names              = ["redisCache"]
  }
}

resource "azurerm_private_dns_zone" "redis" {
  name                = "privatelink.redis.cache.windows.net"
  resource_group_name = azurerm_resource_group.this.name
}

resource "azurerm_private_dns_zone_virtual_network_link" "redis" {
  name                 = "${var.name}-redis"
  private_dns_zone_id  = azurerm_private_dns_zone.redis.id
  virtual_network_id   = azurerm_virtual_network.this.id
  registration_enabled = false
}

# Add A record for the Redis cache's private endpoint
resource "azurerm_private_dns_a_record" "redis" {
  name                = azurerm_redis_cache.this.name
  private_dns_zone_id = azurerm_private_dns_zone.redis.id
  ttl                 = 300
  records             = [azurerm_private_endpoint.redis.private_service_connection[0].private_ip_address]
}

resource "azurerm_redis_cache" "this" {
  name                          = module.naming.redis_cache.name_unique
  location                      = var.location
  resource_group_name           = azurerm_resource_group.this.name
  capacity                      = var.redis_capacity
  family                        = var.redis_family
  sku_name                      = var.redis_sku_name
  minimum_tls_version           = "1.2"
  public_network_access_enabled = false

  redis_configuration {
    maxmemory_policy = "noeviction"
  }

  tags = {
    application = local.tag_name
  }
}
